<resources>
    <string name="app_name" translatable="false">RefGuide+</string>
    <string name="action_settings">Settings</string>

    <string name="single_columns">View with a single column</string>
    <string name="multiple_columns">View with multiple columns</string>

    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>

    <string name="preference_category_expert">Expert</string>
    <string name="preference_category_general">General</string>

    <string name="font_size_small">Small</string>
    <string name="font_size_medium">Medium</string>
    <string name="font_size_large">Large</string>
    <string name="font_size_pref_summary">Set a font-size</string>
    <string name="font_size_pref_title">Font-size</string>
    <string name="font_size_xlarge">Extra Large</string>
    <string name="font_size_xsmall">Extra Small</string>
    <string name="no_entries_found">No entries found.</string>
    <string name="dialog_exit">Exit?</string>
    <string name="dialog_sure_exit">Are you sure you want to exit?</string>
    <string name="dialog_answer_no">No</string>
    <string name="dialog_answer_yes">Yes</string>
    <string name="change_language_location">Change Location/Language</string>
    <string name="page_more">More</string>
    <string name="no_languages_found">No languages have been found.\nIt seems like the location you have selected is not available yet.\nPlease try it again later</string>
    <string name="no_locations_found">No locations have been found.\nIt seems like the server is not available.\nPlease try it again later</string>
    <string name="welcome_to_x">Welcome to %s</string>
    <string name="dialog_choose_language_title">Choose a language</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="search_title">Search</string>
    <string name="preferences">Preferences</string>
    <string name="title_activity_event">EventActivity</string>
    <string name="event_list_title">Events</string>
    <string name="information">Information</string>
    <string name="dialog_title_loading_language">Loading</string>
    <string name="dialog_content_loading_language">Please wait. Loading language.</string>
    <string name="refguide" translatable="false">RefGuide+ %s</string>
</resources>
