<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".OverviewActivity">

    <item
        android:id="@+id/action_start"
        android:orderInCategory="100"
        android:title="@string/change_language_location"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_columns"
        android:orderInCategory="1"
        android:title="@string/multiple_columns"
        android:visible="false"
        app:showAsAction="never" />


    <item
        android:id="@+id/search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search_title"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />

</menu>
